front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: quiz-backend
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: quiz-backend
        tier: backend
        track: stable
    spec:
      containers:
        - name: quiz-backend
          image: bora2612b/bora:bckend-image-bora
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: quiz-backend
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: quiz-backend
        tier: backend
        track: stable
    spec:
      containers:
        - name: quiz-backend
          image: bora2612b/bora:bckend-image-bora
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
---
